--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "scripts": {
+    "type-check": "tsc",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+  },
   "dependencies": {
     "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^18.7.1",
+    "meriyah": "^4.3.0"
   }
 }
