--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "build:js": "babel webpack --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "start:watch": "nodemon --watch 'Webpack/**' --ext 'ts,json' --exec npm run build:js"
   },
+  "type": "module",
   "dependencies": {
+    "core-js": "3",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
@@ -15,6 +18,8 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.7.1",
-    "meriyah": "^4.3.0"
+    "astring": "^1.8.3",
+    "meriyah": "^4.3.0",
+    "nodemon": "^2.0.19"
   }
 }
